force-app/main/default/objects/Cinema_Movie__c/Cinema_Movie__c.object-meta.xml
<CustomObject>
    <label>Cinema Movie</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Cinema Movie Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cinema Movies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>