force-app/main/default/objects/Cinema_Movie__c/fields/Cinema__c.field-meta.xml
<CustomField>
    <fullName>Cinema__c</fullName>
    <label>Cinema</label>
    <referenceTo>Cinema__c</referenceTo>
    <relationshipLabel>Cinema Movies</relationshipLabel>
    <relationshipName>Cinema_Movies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>