force-app/main/default/objects/Cinema_Movie__c/fields/Premiere_date__c.field-meta.xml
<CustomField>
    <fullName>Premiere_date__c</fullName>
    <label>Premiere date</label>
    <type>Date</type>
</CustomField>