force-app/main/default/objects/Cinema_Movie__c/fields/Shown_till__c.field-meta.xml
<CustomField>
    <fullName>Shown_till__c</fullName>
    <label>Shown till</label>
    <type>Date</type>
</CustomField>